feat: implementa gestão de departamentos
- Adiciona entidade Departamento com CRUD completo
- Cria DepartamentoController, Service e Repository
- Implementa DTOs para departamentos
- Atualiza Funcionario com relacionamento com Departamento
- Ajusta DTOs de Funcionario para incluir departamento